<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2E2E2E"
    tools:context=".MainActivity">



    <TextView
        android:id="@+id/resultBox"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/result_box"
        android:background="@android:color/transparent"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="80sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
         />
    
    <EditText
        android:id="@+id/calculationBox"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/resultBox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        android:background="@android:color/transparent"
        android:text="@string/calc_box"
        android:textColor="#B8B8B8"
        android:textAlignment="textEnd"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:textSize="20sp"
        />

    <TableLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="30dp"
        android:layout_marginTop="1dp"
        app:layout_constraintTop_toBottomOf="@id/calculationBox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.2"
        >
        <TableRow>
            <Button
                android:id="@+id/all_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFEB3B"
                android:text="@string/all_clear"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"


                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:id="@+id/del"
                android:text="@string/del"
                android:backgroundTint="#99FF5722"
                android:textSize="15sp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"

                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#99FF5722"

                android:id="@+id/percentage"
                android:text="@string/percentage"
                android:textSize="19sp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#99FF5722"
                android:id="@+id/divide"
                android:text="@string/div"
                android:textSize="19sp"
                android:layout_weight="1"

                />
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#6A6A6A"

                android:text="@string/btn7"
                android:textSize="19sp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"

                />

            <Button
                android:id="@+id/btn8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#6A6A6A"
                android:text="@string/btn8"
                android:textSize="19sp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"

                />
            <Button
                android:id="@+id/btn9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#6A6A6A"
                 android:text="@string/btn9"
                android:textSize="19sp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/multiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#99FF5722"
                 android:text="@string/multiply"
                android:textSize="19sp"
                android:layout_weight="1"

                />
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#6A6A6A"
                 android:text="@string/btn4"
                android:textSize="19sp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"

                />

            <Button
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#6A6A6A"
                 android:text="@string/btn5"
                android:textSize="19sp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"

                />
            <Button
                android:id="@+id/btn6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:text="@string/btn6"
                android:textSize="19sp"
                android:layout_marginEnd="5dp"
                android:backgroundTint="#6A6A6A"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/btnsub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:text="@string/sub"
                android:textSize="19sp"
                android:layout_weight="1"
                android:backgroundTint="#99FF5722"
                />
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:text="@string/btn1"
                android:textSize="19sp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:backgroundTint="#6A6A6A"
                />

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:text="@string/btn2"
                android:textSize="19sp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:backgroundTint="#6A6A6A"
                />
            <Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:text="@string/btn3"
                android:textSize="19sp"
                android:layout_marginEnd="5dp"
                android:backgroundTint="#6A6A6A"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/btnadd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:text="@string/add"
                android:textSize="19sp"
                android:layout_weight="1"
                android:backgroundTint="#99FF5722"
                />
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/btn0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:text="@string/btn0"
                android:textSize="19sp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:backgroundTint="#6A6A6A"
                />

            <Button
                android:id="@+id/btndot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:text="@string/btndot"
                android:textSize="19sp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:backgroundTint="#6A6A6A"
                />
            <Button
                android:enabled="false"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"

                />
            <Button
                android:id="@+id/btnequals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:text="@string/equals"
                android:textSize="19sp"
                android:layout_weight="1"
                android:backgroundTint="#4CAF50"
                />

        </TableRow>

    </TableLayout>





</androidx.constraintlayout.widget.ConstraintLayout>